# Aps

./: Cargo.toml  README.md  typage.sh
Typage/: typeChecker.pl
src/: aps.lalrpop  aps_type.rs  ast.rs  config.rs  eval.rs  lib.rs  main.rs  parser.rs  rum.lalrpop  rum_type.rs  type_checker.rs
src/typer/: mod.rs
test/rum0/: prog000.rum  prog001.rum  prog002.rum  prog003.rum  prog004.rum  prog005.out  prog005.rum
test/rum1/: prog118.rum
test/rumfn/: fn_simple.rum  fn_simple1.rum
