[package]
name = "rum"
version = "3.1.2"
authors = ["Ivan <delgado.ivan@protonmail.com>"]
edition = "2018"

[[bin]]
name = "rum_bin"
path = "src/main.rs"

[lib]
name = "rum_lib"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.18.1"

[dependencies]
lalrpop-util = "0.18.1"
regex = "1.3.4"